Add paper content

--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^5.1.0"
+  },
+  "dependencies": {
+    "sass": "^1.50.0"
   }
 }
